footer fixed. remaining \Item -> \item fixed

--- a/references.bib
+++ b/references.bib
@@ -613,46 +613,6 @@
   doi       = "10.1017/aap.2018.12"
 }
 
-@INCOLLECTION{Sobotkova2016-mx,
-  title       = "Measure Twice, Cut Once: Cooperative Deployment of a
-                 Generalized, {Archaeology-Specific} Field Data Collection
-                 System",
-  booktitle   = "Mobilizing the Past for a Digital Future: The Potential of
-                 Digital Archaeology",
-  author      = "Sobotkova, Adela and Ross, Shawn A and Ballsun-Stanton, Brian
-                 and Fairbairn, Andrew and Thompson, Jessica and
-                 VanValkenburgh, Parker",
-  editor      = "Averett, Erin Walcek and Gordon, Jody Michael and Counts,
-                 Derek B",
-  abstract    = "The Federated Archaeological Information Management Systems
-                 (FAIMS) Project is an Australian, university-based initiative
-                 developing a generalized, open-source mobile data collection
-                 platform that can be customized for diverse archaeological
-                 activities. Three field directors report their experiences
-                 adapting FAIMS software to projects in Turkey, Malawi, and
-                 Peru, highlighting three themes: (1) the transition from paper
-                 to digital recording has upfront costs with backend pay-off,
-                 (2) the transition involves decisions and tradeoffs that
-                 archaeologists and technologists need to make together, and
-                 (3) digital recording has both short- and long-term benefits.
-                 In the short-term, project directors reported efficient
-                 acquisition of richer, more accurate, data. Longer-term, they
-                 anticipated that the availability of comprehensive,
-                 born-digital datasets would support rigorous demonstration of
-                 field intuitions and faster publication of more complete
-                 datasets. We argue that cooperative development involving
-                 archaeologists and technologists can produce high-quality,
-                 fit-for-purpose software, representing the best chance to
-                 embedding new technology in established projects.",
-  publisher   = "The Digital Press @ University of North Dakota",
-  pages       = "337--371",
-  month       =  oct,
-  year        =  2016,
-  address     = "Grand Forks, ND",
-  isbn        = "9780692790137",
-  original_id = "956c7cd3-4977-029a-9e5a-ae71845e1d38"
-}
-
 @INCOLLECTION{Ross2015-ph,
   title       = "Building the Bazaar: Enhancing Archaeological Field Recording
                  Through an Open Source Approach",
@@ -816,3 +776,28 @@
   original_id = "956c7cd3-4977-029a-9e5a-ae71845e1d38"
 }
 
+
+@MISC{Osf2014-pf,
+  title        = "Sample Implementation of Guidelines for Transparency and
+                  Openness Promotion ({TOP)in} Journal Policies and Practices
+                  (Version 1.0.2)",
+  booktitle    = "Open Science Framework",
+  author       = "{OSF}",
+  abstract     = "The following sample implementation of TOP Guidelines
+                  illustrates adoption of Level 2 forCitation Standards, Data,
+                  Analytic, Methods, and Materials transparency, and Design
+                  andAnalysis transparency, and Level 1 for Preregistration and
+                  Replication. Note that Data, AnalyticMethods, and Materials
+                  are easily condensed into a single description because the
+                  same levelis applied to all three. Likewise, Preregistration
+                  of Studies and Preregistration of Analysis Plansare combined
+                  into a single description because they are the same level.
+                  Total document lengthfor all 8 standards is about 2 pages.",
+  publisher    = "OSF",
+  month        =  aug,
+  year         =  2014,
+  howpublished = "\url{https://osf.io/edtxm/}",
+  note         = "Accessed: 2019-4-20",
+  keywords     = "author guidelines; journals; reproducibility; Project",
+  language     = "en"
+}
