--- a/references.bib
+++ b/references.bib
@@ -801,3 +801,179 @@
   keywords     = "author guidelines; journals; reproducibility; Project",
   language     = "en"
 }
+
+
+@ARTICLE{Muthukrishna2019-kt,
+  title    = "A problem in theory",
+  author   = "Muthukrishna, Michael and Henrich, Joseph",
+  abstract = "The replication crisis facing the psychological sciences is
+              widely regarded as rooted in methodological or statistical
+              shortcomings. We argue that a large part of the problem is the
+              lack of a cumulative theoretical framework or frameworks. Without
+              an overarching theoretical framework that generates hypotheses
+              across diverse domains, empirical programs spawn and grow from
+              personal intuitions and culturally biased folk theories. By
+              providing ways to develop clear predictions, including through
+              the use of formal modelling, theoretical frameworks set
+              expectations that determine whether a new finding is
+              confirmatory, nicely integrating with existing lines of research,
+              or surprising, and therefore requiring further replication and
+              scrutiny. Such frameworks also prioritize certain research foci,
+              motivate the use diverse empirical approaches and, often, provide
+              a natural means to integrate across the sciences. Thus,
+              overarching theoretical frameworks pave the way toward a more
+              general theory of human behaviour. We illustrate one such a
+              theoretical framework: dual inheritance theory.",
+  journal  = "Nature human behaviour",
+  volume   =  3,
+  number   =  3,
+  pages    = "221--229",
+  month    =  mar,
+  year     =  2019,
+  language = "en",
+  issn     = "2397-3374",
+  pmid     = "30953018",
+  doi      = "10.1038/s41562-018-0522-1"
+}
+
+
+@INCOLLECTION{Hole1973-cy,
+  title     = "Questions of theory in the explanation of culture change in
+               prehistory",
+  booktitle = "The Explanation of Culture Change: Models in Prehistory",
+  author    = "Hole, Frank",
+  editor    = "Renfrew, Colin",
+  abstract  = "Change, a phenomenon readily recognized in human history, has
+               intrigued scholars in numerous disciplines for many years. In
+               view of this interest it is useful now to assess current
+               archaeological theories of change. In my view, our theory on
+               change is weak because we have not made necessary operational
+               definitions of important concepts in terms of the properties of
+               the phenomena under discussion and the goes we wish to achieve.
+               If we recognize these weaknesses we can remedy them by devising
+               and implementing well-defined experiments or observational
+               studies. The title of this seminar contains five crucial
+               concepts: explanation, prehistory, culture, change and models.
+               The remarks that follow consider each concept in turn.",
+  publisher = "Duckworth",
+  pages     = "19--34",
+  year      =  1973,
+  isbn      = "9780715606735"
+}
+
+
+@MISC{Alveo2019-tk,
+  title        = "Alveo: A Virtual Lab for Human Communication Science",
+  booktitle    = "Alveo",
+  author       = "{Alveo}",
+  abstract     = "Alveo provides on-line infrastructure for accessing human
+                  communication data sets (speech, texts, music, video, etc.)
+                  and for using specialised tools for searching, analysing and
+                  annotating that data.",
+  year         =  2019,
+  howpublished = "\url{http://alveo.edu.au/}",
+  note         = "Accessed: 2019-4-24"
+}
+
+
+
+@MISC{Strategyzer_AG2019-uu,
+  title        = "Strategyzer | Trusted by over 5 million business
+                  practitioners",
+  booktitle    = "Strategyzer",
+  author       = "{Strategyzer AG}",
+  abstract     = "Enterprises and smaller companies use our platform and
+                  services to more clearly understand customers, create better
+                  products, and grow businesses.",
+  year         =  2019,
+  howpublished = "\url{https://www.strategyzer.com/}",
+  note         = "Accessed: 2019-4-24"
+}
+
+
+@MISC{Bureau_of_Reclamation2017-xl,
+  title        = "{DataApp}: A Mobile App Framework for Field Data Capture",
+  booktitle    = "Bureau of Reclamation Research and Development Office",
+  author       = "{Bureau of Reclamation}",
+  abstract     = "Data collection is fundamental to water and environmental
+                  management. Streamflows, reservoir elevations, and flows in
+                  canals and conduits, for example, are continuously monitored
+                  to support decisions ranging from real-time operations to
+                  long-term planning. Data are routinely collected to monitor
+                  infrastructure conditions and identify maintenance
+                  priorities, and a wide range of environmental data are
+                  collected to characterize habitat conditions, monitor fish
+                  and wildlife populations, and support ecosystem restoration
+                  programs. Scientists, engineers, and technicians are
+                  increasingly using mobile devices such as tablets and
+                  smartphones to record measurements, document site locations
+                  via GPS, and take photos and notes in the field. Numerous
+                  apps are already available to support general data
+                  collection; however, these apps do not provide the
+                  functionality and flexibility needed to support the broad
+                  range of water and environmental monitoring needs. For
+                  example, most existing apps are unable to interface with
+                  field instruments (e.g., sensors and data loggers), and many
+                  have limited options for exporting data. Development of a
+                  flexible, extensible, and open source data collection app
+                  framework for mobile devices will facilitate the use of
+                  mobile devices for field data collection, which in turn will
+                  improve data collection efficiency, lower data collection
+                  costs, and improve data quality, transparency, and
+                  dissemination for applications to management, decision
+                  making, and scientific discovery.",
+  year         =  2017,
+  howpublished = "\url{https://www.usbr.gov/research/challenges/dataapp.html}",
+  note         = "Accessed: 2018-3-27"
+}
+
+@MISC{Ala2019-cb,
+  title        = "{BioCollect}: Advanced data collection for biodiversity
+                  projects",
+  booktitle    = "Atlas of Living Australia",
+  author       = "{ALA}",
+  abstract     = "BioCollect is a sophisticated, yet simple to use tool
+                  developed by the Atlas of Living Australia (ALA) in
+                  collaboration with over 100 organisations which are actively
+                  involved in field data capture. It has been developed to
+                  support the needs of scientists, ecologists, citizen
+                  scientists and natural resource managers in the
+                  field-collection and management of biodiversity, ecological
+                  and natural resource management (NRM) data. The tool is
+                  developed and hosted by the ALA and is free for public use.",
+  year         =  2019,
+  howpublished = "\url{https://www.ala.org.au/biocollect/}",
+  note         = "Accessed: 2019-4-24"
+}
+
+@MISC{Tern2019-sp,
+  title        = "{TERN} - Terrestrial Ecosystem Research Network",
+  booktitle    = "{TERN} - Terrestrial Ecosystem Research Network",
+  author       = "{TERN}",
+  year         =  2019,
+  howpublished = "\url{https://www.tern.org.au/}",
+  note         = "Accessed: 2019-4-24"
+}
+
+
+@MISC{Ala2019-by,
+  title        = "Atlas of Living Australia",
+  booktitle    = "Atlas of Living Australia",
+  author       = "{ALA}",
+  abstract     = "The Atlas of Living Australia is a collaborative, national
+                  project that aggregates biodiversity data from multiple
+                  sources and makes it freely available and usable online.",
+  year         =  2019,
+  howpublished = "\url{https://www.ala.org.au/}",
+  note         = "Accessed: 2019-4-24"
+}
+
+@MISC{Jisc2018-gx,
+  title        = "Research Data Management Toolkit",
+  booktitle    = "{JISC}",
+  author       = "{JISC}",
+  year         =  2018,
+  url          = "https://rdmtoolkit.jisc.ac.uk/research-data-lifecycle/",
+  howpublished = "\url{https://rdmtoolkit.jisc.ac.uk/research-data-lifecycle/}",
+  note         = "Accessed: 2018-11-6"
+}
