Final version for delivery at CAA2019.

--- a/references.bib
+++ b/references.bib
@@ -977,3 +977,17 @@
   howpublished = "\url{https://rdmtoolkit.jisc.ac.uk/research-data-lifecycle/}",
   note         = "Accessed: 2018-11-6"
 }
+
+
+@MISC{Cos2019-mr,
+  title        = "{TOP} Guidelines",
+  booktitle    = "Center for Open Science",
+  author       = "{COS}",
+  abstract     = "The TOP Guidelines were created by journals, funders, and
+                  societies to align scientific ideals with practices. TOP
+                  provides a suite of tools to guide implementation of better,
+                  more transparent research.",
+  year         =  2019,
+  howpublished = "\url{https://cos.io/our-services/top-guidelines/}",
+  note         = "Accessed: 2019-4-25"
+}
