--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 \PassOptionsToPackage{table}{xcolor}    %https://tex.stackexchange.com/a/5365/5483
 
 \usetheme{macquarie}
+\usepackage{multicol} % https://tex.stackexchange.com/a/396018/5483
 
 \usepackage[english]{babel}       % Set language
 % \usepackage[utf8x]{inputenc}      % Set encoding
@@ -44,9 +45,16 @@
 
 \usepackage{enumitem} % https://tex.stackexchange.com/a/2292/5483
 
+%https://tex.stackexchange.com/a/371844/5483
+\setbeamerfont{bibliography entry author}{size=\tiny}
+\setbeamerfont{bibliography entry title}{size=\tiny}
+\setbeamerfont{bibliography entry location}{size=\tiny}
+\setbeamerfont{bibliography entry note}{size=\tiny}
+\setbeamerfont{bibliography item}{size=\tiny}
+
 %https://tex.stackexchange.com/q/333587/5483
 %TODO SHAWN REPLACE OSF URL
-\setbeamertemplate{footline}{\strut~\texttt{https://osf.io/c6m4u/ | CC-BY 4.0}\hfill\insertframenumber~/~\inserttotalframenumber\strut~~~}
+\setbeamertemplate{footline}{\strut~\texttt{https://osf.io/v5jp7/}\hfill\insertframenumber~/~\inserttotalframenumber\strut~~~}
 
 \title{Seven years of FAIMS Mobile} % Presentation title
 \author{Shawn A Ross}               % Presentation author
@@ -76,13 +84,125 @@
 % <content>
 %\end{frame}
 
+% Slides to speak to at CAA2019
+
+\section{CAA2019 short presentation}
+
+\begin{frame}{Perceptions of the reproducibility crisis}
+  \begin{figure}[H]
+    \centering
+        \includegraphics[height=.7\textheight]{figures/reproducibility-graphic-online1.jpeg}
+        \caption{Is there a reproducibility crisis? \cite{Baker2016-cf}}
+        \label{fig:figure1a}
+  \end{figure}
+\end{frame}
+
+\begin{frame}{Level 2 TOP Guidelines for authors (excerpt)}
+  
+    \begin{enumerate}[label=\arabic*.]
+        \setcounter{enumi}{1}
+        % This increments the enumerate counter by 1.
+        
+        \item Authors using original data must:
+        \begin{enumerate}[label=\alph*.]
+
+            \item make the data available at a trusted digital repository [...]
+            \item include all variables, treatment conditions, and observations described in the manuscript.
+            \item provide a full account of the procedures used to collect, preprocess, clean, or generate the data.
+            \item provide program code, scripts, codebooks, and other documentation sufficient to precisely reproduce all published results.
+            \item provide research materials and description of procedures necessary to conduct an independent replication of the research.
+        \end{enumerate}
+    \end{enumerate}
+    \cite{Osf2014-pf}
+\end{frame}
+
+\begin{frame}{Scalable approaches to data and analysis}
+  \begin{figure}[H]
+    \centering
+        \includegraphics[height=.7\textheight]{figures/Ocean-Health-Index.jpg}
+        \caption{Better science in less time, illustrated by the Ocean Health Index project. \cite{Stewart_Lowndes2017-lj}}
+        \label{fig:figure2a}
+  \end{figure}
+\end{frame}
+
+\begin{frame}{`Small data' research}
+ \begin{figure}[H]
+    \centering
+        \includegraphics[height=.75\textheight]{figures/Archaeologists-standards.png}
+        \caption{Archaeologists contemplate data standards (FAIMS Stocktaking, 2012)}
+        \label{fig:figure4a}
+ \end{figure}
+\end{frame}
+
+\begin{frame}{The data lifecycle}
+ \begin{figure}[H]
+    \centering
+        \includegraphics[height=.75\textheight]{figures/research-data-life-diagram.png}
+        \caption{\cite{Jisc2018-gx} Image CC-BY-ND}
+        \label{fig:figure5a}
+ \end{figure}
+\end{frame}
+
+\begin{frame}{FAIMS Mobile software}
+ \begin{figure}[H]
+    \centering
+        \includegraphics[height=.75\textheight]{figures/FAIMS-screenshots.png}
+        \caption{FAIMS Mobile: GIS and `picture dictionaries'}
+        \label{fig:figure8a}
+ \end{figure}
+\end{frame}
+
+\begin{frame}{Field data capture infrastructure: key messages}
+    \begin{itemize}[label=\textbullet]
+        \item We deserve research-specific software.
+        \item Diverse practices and limited resources require generalised software.
+        \item Do one thing well with modular and federated software (but slice the pie thoughtfully).
+        \item Open-source software has advantages (but is difficult to sustain). 
+        \item Scope requirements carefully.
+        \item Invest in outreach and engagement.
+    \end{itemize}
+\end{frame}
+
+
+\begin{frame}{Generalised}
+ \begin{figure}[H]
+    \centering
+        \includegraphics[height=.75\textheight]{figures/FAIMS-generalised.png}
+        \caption{FAIMS Mobile customisations on GitHub}
+        \label{fig:figure11a}
+ \end{figure}
+\end{frame}
+
+\begin{frame}{Modular and federated}
+ \begin{figure}[H]
+    \centering
+        \includegraphics[height=.75\textheight]{figures/FAIMS-federated.png}
+        \caption{FAIMS Mobile federation}
+        \label{fig:figure13a}
+ \end{figure}
+\end{frame}
+
+\begin{frame}{Challenges and paths forward}
+  How do we get from where we are now to where we want to be?
+      \begin{itemize}[label=\textbullet]
+        \item Understand the evolving expectations of transparent research. 
+        \item Look past desktop software (Excel, ARCGIS, Filemaker, Access, etc.).
+        \item Rally around emerging research- and domain-specific solutions (even if imperfect).
+        \item Overcome `not invented here'; you don't need a bespoke solution.
+        \item Budget for `ground-up' transparency (data and code). Up-front costs will be high but offer longer-term payoffs (in costs, time, and quality).
+        \item Implement (and budget for) fundamental good practice in data and code management before other technologies.
+        \item Improve research design (prioritise approach over methods) \cite{Muthukrishna2019-kt, Hole1973-cy}
+    \end{itemize}
+\end{frame}
+
+% In-depth information for reference
 \section{Transparency and reproducibility}
 
-\begin{frame}{The 'reproducibility crisis'}
-  For nearly a decade the ‘reproducibility crisis’ has featured in the scientific literature \cite{Jasny2011-bw, Baker2016-cf, Munafo2017-bj}. Low reproducibility rates have emerged from large-scale studies:
+\begin{frame}{The `reproducibility crisis'}
+  For nearly a decade the reproducibility crisis has featured in the scientific literature \cite{Jasny2011-bw, Baker2016-cf, Munafo2017-bj}. Low reproducibility rates have emerged from large-scale studies:
     \begin{itemize}[label=\textbullet]
-        \item Results from only 39\% of psychology studies could be reproduced \cite{Open_Science_Collaboration2015-vf}
-        \item Even lower reproducibility rate in biomedical research \cite{Begley2012-xt,Prinz2011-za}
+        \item Results from only 39\% of psychology studies could be reproduced \cite{Open_Science_Collaboration2015-vf}.
+        \item Even lower reproducibility rate in biomedical research \cite{Begley2012-xt,Prinz2011-za}.
     \end{itemize}
 \end{frame}
 
@@ -91,27 +211,27 @@
     \centering
         \includegraphics[height=.7\textheight]{figures/reproducibility-graphic-online1.jpeg}
         \caption{Is there a reproducibility crisis? \cite{Baker2016-cf}}
-        \label{fig:figure1}
+        \label{fig:figure3}
   \end{figure}
 \end{frame}
 
 \begin{frame}{The response: improved rigour and transparency}
-  `Trust but verify'; emerging good practice:
+  Key guidelines to good practice:
     \begin{itemize}[label=\textbullet]
-        \item Findable, Accessible, Interoperable, and Reusable (FAIR) data \cite{Wilkinson2016-mr, Go-fair2017-vs}
-        \item Transparency and Openness Promotion (TOP) guidelines \cite{Nosek2015-wm}
-        \item Data transparency toolkit \cite{Perkel2018-rw}
+        \item Findable, Accessible, Interoperable, and Reusable (FAIR) data \cite{Wilkinson2016-mr, Go-fair2017-vs}.
+        \item Transparency and Openness Promotion (TOP) guidelines \cite{Nosek2015-wm}.
+        \item Data transparency toolkit \cite{Perkel2018-rw}.
     \end{itemize}
 \end{frame}
 
 \begin{frame}{The response: from guidelines to mandates}
   Recent mandates for transparency or reproducibility:
     \begin{itemize}[label=\textbullet]
-        \item Nature: Transparency Upgrade \cite{Nature2017-lq}
-        \item Nature: FAIR data in Earth science \cite{Nature2019-ng}
-        \item Copernicus: FAIR data in atmospheric sciences \cite{Van_Edig2018-bu}
-        \item Not just the natural sciences: AJPS requires data and code \cite{Jacoby2017-lw, Ajps2015-ex} 
-        \item TOP Guidelines have 5000 signatories, including publishers representing 1000 journals (https://cos.io/our-services/top-guidelines/)
+        \item Nature: Transparency Upgrade \cite{Nature2017-lq}.
+        \item Nature: FAIR data in Earth science \cite{Nature2019-ng}.
+        \item Copernicus: FAIR data in atmospheric sciences \cite{Van_Edig2018-bu}.
+        \item Not just the natural sciences: AJPS requires data and code \cite{Jacoby2017-lw, Ajps2015-ex}.
+        \item TOP Guidelines have 5000 signatories, including publishers representing 1000 journals \cite{Cos2019-mr}.
     \end{itemize}
 \end{frame}
 
@@ -159,7 +279,7 @@
 \end{frame}
 
 \begin{frame}{Beyond compliance: large-scale research}
-    The same approaches that facilitate transparency and reproducibility support the kind of scalable and synthetic research that can address archaeological 'grand challenges'. \cite{Kintigh2014-ub}
+    The same approaches that facilitate transparency and reproducibility support the kind of scalable and synthetic research that can address archaeological `grand challenges'. \cite{Kintigh2014-ub}
         \begin{itemize}[label=\textbullet]
             \item Paper data capture and manual digitisation and cleaning don't scale.
             \item Email and desktop software don't scale.
@@ -171,18 +291,18 @@
     \centering
         \includegraphics[height=.7\textheight]{figures/Ocean-Health-Index.jpg}
         \caption{Better science in less time, illustrated by the Ocean Health Index project. \cite{Stewart_Lowndes2017-lj}}
-        \label{fig:figure3}
+        \label{fig:figure14}
   \end{figure}
 \end{frame}
 
-\section{'Small data' infrastructure across the data lifecycle}
+\section{`Small data' infrastructure across the data lifecycle}
 
-\begin{frame}{'Small data' research}
+\begin{frame}{`Small data' research}
  \begin{figure}[H]
     \centering
         \includegraphics[height=.75\textheight]{figures/Archaeologists-standards.png}
         \caption{Archaeologists contemplate data standards (FAIMS Stocktaking, 2012)}
-        \label{fig:figure4}
+        \label{fig:figure7}
  \end{figure}
 \end{frame}
 
@@ -204,7 +324,7 @@
     \centering
         \includegraphics[height=.75\textheight]{figures/research-data-life-diagram.png}
         \caption{\cite{Jisc2018-gx} Image CC-BY-ND}
-        \label{fig:figure5}
+        \label{fig:figure9}
  \end{figure}
 \end{frame}
 
@@ -212,38 +332,54 @@
     Consider the infrastructure needed to manage the three main phases of the data lifecycle
     \begin{itemize}[label=\textbullet]
         \item Publication (most mature): domain-specific repositories.
-        \item Processing and analysis (less mature): project-level code \cite{Stewart_Lowndes2017-lj}, then Virtual Labs / Science Gateways (e.g. \cite{Alveo2019-tk} in language analysis).
+        \item Processing and analysis (less mature): project-level code \cite{Stewart_Lowndes2017-lj}, then Virtual Labs / Science Gateways, like \cite{Alveo2019-tk} in language analysis.
         \item Capture (least mature): most varied, needs to work offline under difficult conditions. Commercial solutions insufficient \cite{Bureau_of_Reclamation2017-xl}.
     \end{itemize}
 \end{frame}
 
 \section{Lessons from FAIMS}
 
+\begin{frame}{Introduction to the FAIMS Project}
+    \begin{itemize}[label=\textbullet]
+        \item The Field Acquired Information Management Systems (FAIMS) Project began in 2012 as a national Australian information infrastructure project in archaeology.
+        \item Developed FAIMS Mobile for field data capture \cite{Ballsun-Stanton2018-zd}.
+        \item Use expanded beyond archaeology to geoscience, ecology, ethnography, linguistics, oral history.
+        \item Has been customised for over 50 workflows at more than 30 projects. 
+        \item Data and workflow modelling for these customisations provided deep insights into field data capture and the infrastructure needed to support it.
+    \end{itemize}
+\end{frame}
+
 \begin{frame}{FAIMS Mobile software}
  \begin{figure}[H]
     \centering
         \includegraphics[height=.75\textheight]{figures/FAIMS-screenshots.png}
-        \caption{FAIMS Mobile: GIS and 'picture dictionaries'}
-        \label{fig:figure6}
+        \caption{FAIMS Mobile: GIS and `picture dictionaries'}
+        \label{fig:figure10}
  \end{figure}
 \end{frame}
 
-\begin{frame}{Introduction to the FAIMS Project}
+\begin{frame}{Key research-specific FAIMS Mobile features}
     \begin{itemize}[label=\textbullet]
-        \item The Field Acquired Information Management Systems (FAIMS) Project began in 2012 as an information infrastructure project for field data capture in archaeology.
-        \item Developed FAIMS Mobile, a generalised, customisable platform \cite{Ballsun-Stanton2018-zd}.
-        \item Use expanded beyond archaeology to geoscience, ecology, ethnography, linguistics, oral history
-        \item Has been customised for over 50 workflows at more than 30 projects. 
-        \item Data and workflow modelling for these customisations has provided unique insights into field data capture and the infrastructure needed to support it.
+        \item Fundamentally customisable.
+        \item Tightly binds structured, geospatial, multimedia, and free text data.
+        \item Works offline.
+        \item Automated bi-directional synchronisation using local or online server
+        \item Record history: append-only datastore, versioning, rollback.
+        \item Mobile GIS.
+        \item Connects to internal and external sensors, Bluetooth / USB devices.
+        \item Multilingual.
+        \item Granular help.
+        \item Granular metadata / uncertainty.
+        \item Generalised export.
+        \item ‘Hooks’ for data interoperability, Open Linked Data approaches.
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Key aspects of FAIMS Mobile}
-    Field data capture infrastructure
+\begin{frame}{Field data capture infrastructure: key messages}
     \begin{itemize}[label=\textbullet]
         \item We deserve research-specific software.
         \item Diverse practices and limited resources require generalised software.
-        \item Do one thing well with modular and federated software (but slice the pie carefully).
+        \item Do one thing well with modular and federated software (but slice the pie thoughtfully).
         \item Open-source software has advantages (but is difficult to sustain). 
         \item Scope requirements carefully.
         \item Invest in outreach and engagement.
@@ -259,16 +395,7 @@
     Compare ecology in Australia: TERN, ALA, Biocollect, and associated research clouds \cite{Tern2019-sp, Ala2019-by, Ala2019-cb}.
 \end{frame}
 
-\begin{frame}{FAIMS Mobile software}
- \begin{figure}[H]
-    \centering
-        \includegraphics[height=.75\textheight]{figures/FAIMS-generalised.png}
-        \caption{FAIMS Mobile customisations on GitHub}
-        \label{fig:figure7}
- \end{figure}
-\end{frame}
-
-\begin{frame}{Generalised}
+\begin{frame}{Generalised (not generic or bespoke)}
   Commercial software doesn't meet our needs, and bespoke development is too expensive and usually unsustainable.
       \begin{itemize}[label=\textbullet]
         \item Generalised software can be deeply customised to accommodate our diverse data types, data models, workflows, etc.
@@ -276,15 +403,15 @@
         \item Customisations can be published and re-deployed trivially.
         \item Can deliver research-grade software affordably.  
     \end{itemize}
-    FAIMS Mobile cost perhaps 3x a single bespoke application, but has been customised 50x. Customisation cost is 1/10th bespoke, and still <1/2 even if 'core' platform development costs are amortised across projects.
+    FAIMS Mobile cost perhaps 3x a single bespoke application, but has been customised 50x. Customisation cost is 1/10th bespoke, and still <1/2 even if `core' platform development costs are amortised across projects.
 \end{frame}
 
-\begin{frame}{FAIMS Mobile software}
+\begin{frame}{Generalised: customise using code}
  \begin{figure}[H]
     \centering
-        \includegraphics[height=.75\textheight]{figures/FAIMS-federated.png}
-        \caption{FAIMS Mobile federation}
-        \label{fig:figure8}
+        \includegraphics[height=.75\textheight]{figures/FAIMS-generalised.png}
+        \caption{FAIMS Mobile customisations (XML files, mostly) on GitHub}
+        \label{fig:figure11}
  \end{figure}
 \end{frame}
 
@@ -292,8 +419,17 @@
   Do one thing well.
       \begin{itemize}[label=\textbullet]
         \item Identify other infrastructure in the domain and interoperate with it (via ETLs or APIs).
-        \item It is better to divide by data-lifecycle phase rather than data type, since our data is so integrated.
+        \item It is better to divide by data-lifecycle phase rather than data type, since (1) our data is so integrated and (2) field data capture poses unique challenges.
     \end{itemize}
+\end{frame}
+
+\begin{frame}{Modularise by data lifecycle phase}
+ \begin{figure}[H]
+    \centering
+        \includegraphics[height=.75\textheight]{figures/FAIMS-federated.png}
+        \caption{FAIMS Mobile federation strategy}
+        \label{fig:figure13}
+ \end{figure}
 \end{frame}
 
 \begin{frame}{Open source?}
@@ -301,7 +437,7 @@
       \begin{itemize}[label=\textbullet]
         \item Emerging open research principles strongly prefer OSS as opposed to proprietary ‘black boxes’.
         \item Transparency and reusability (esp. customisation code).
-        \item Ability to hand off from one organisation to another (esp. 'core' platform code).
+        \item Ability to hand off from one organisation to another (esp. `core' platform code).
         \item Ability to fork code prevents lock-in and mitigates unwelcome decisions by software developers.
         \item BUT OSS business models are hard to scale and rely on occasional injections of grant or institutional funding.
     \end{itemize}
@@ -344,24 +480,45 @@
         \item Understand the evolving expectations of transparent research. 
         \item Look past desktop software (Excel, ARCGIS, Filemaker, Access, etc.).
         \item Rally around emerging research- and domain-specific solutions (even if imperfect).
-        \item Overcome 'not invented here'; you don't need a bespoke solution.
-        \item Budget for 'ground-up' transparency (data and code). Up-front costs will be high but offer longer-term payoffs (in costs, time, and quality).
+        \item Overcome `not invented here'; you don't need a bespoke solution.
+        \item Budget for `ground-up' transparency (data and code). Up-front costs will be high but offer longer-term payoffs (in costs, time, and quality).
         \item Implement (and budget for) fundamental good practice in data and code management before other technologies.
         \item Improve research design (prioritise approach over methods) \cite{Muthukrishna2019-kt, Hole1973-cy}
     \end{itemize}
 \end{frame}
+% \bibliographystyle{apalike}
 
+ 
 % Adding the option 'allowframebreaks' allows the contents of the slide to be expanded in more than one slide.
 % The "1" comes from the outer theme"
-\begin{frame}[allowframebreaks]{References}
-  \tiny
-  \bibliography{references}
-  \bibliographystyle{apalike}
-\end{frame}
+
+\section{References}
+
+\begin{multicols}{2}[]
+\bibliography{references}
+\bibliographystyle{apalike}
+\end{multicols}
 
 
-\begin{frame}[standout]
-Thank you!
+% \begin{frame}[allowframebreaks]{References}
+  
+%   \bibliography{references}
+%   \bibliographystyle{apalike}
+% \end{frame}
+
+
+\begin{frame}{Thank you!}
+
+This presentation is available at:
+\texttt{https://osf.io/v5jp7/}
+
+Source code for this presentation is available at: \texttt{https://github.com/saross/CAA-Ross-FAIMS}.
+
+FAIMS Project software and documentation can be found at:
+\texttt{https://github.com/faims}.
+
+This work is licensed under a Creative Commons Attribution 4.0 International License.
+
 \end{frame}
 
 
